<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Chat</string>

    <string name="menu_main_connect">Connect</string>
    <string name="menu_main_disconnect">Disconnect</string>
    <string name="menu_main_accept_connection">Accept Connection</string>
    <string name="menu_main_stop_listening">Stop Listening</string>
    <string name="menu_main_clear_conversation">Clear Conversation</string>
    <string name="menu_main_about">About</string>

    <string name="menu_scan_scan">Scan</string>
    <string name="menu_scan_stop">Stop</string>

    <string name="main_status_disconnected">Disconnected</string>
    <string name="main_status_connecting_to">Connecting to %s</string>
    <string name="main_status_connected_to">Connected to %s</string>
    <string name="main_status_listening_for_incoming_connection">Listening for incoming connection</string>

    <string name="main_button_label">Send</string>
    <string name="main_input_hint">Message</string>

    <string name="format_dev_name">%1$s %2$s</string>

    <string name="about_dialog_title">About Chat</string>
    <string name="about_dialog_content">Simple Bluetooth chat application</string>
    <string name="alert_connection_confirmation">Do you really want to connect to this device?</string>

    <string name="scan_status_stopped">Select a device you want to connect to</string>
    <string name="scan_status_scanning">Scanning in progress</string>

    <string name="msg_title">#%1$d (%2$s)</string>
    <string name="msg_content">%1$s\n\n%2$s</string>

    <string name="toast_bluetooth_not_supported">This device does not support Bluetooth</string>
    <string name="toast_bluetooth_disabled">Bluetooth should be enabled</string>
    <string name="toast_scanning_requires_permission">Scanning requires permission %s</string>
    <string name="toast_connection_failed">Connection failed</string>
    <string name="toast_connection_closed">Connection closed</string>
    <string name="toast_empty_message">Empty message</string>
</resources>
