<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/main_status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:text="@string/main_status_disconnected"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/main_progress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/main_status"
        style="?android:attr/progressBarStyleHorizontal" />

    <ListView
        android:id="@+id/main_logview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/margin"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/sound_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_progress"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/main_input"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/margin"
        android:layout_marginTop="8dp"
        android:hint="@string/main_input_hint"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/main_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sound_button"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/main_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:onClick="onClickSendButton"
        android:text="@string/main_button_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/sound_button"
        android:layout_width="373dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:onClick="onClickSoundButton"
        android:text="SOUND"
        app:layout_constraintBottom_toTopOf="@+id/main_button"
        tools:layout_editor_absoluteX="16dp" />

</android.support.constraint.ConstraintLayout>
